--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@asseinfo/react-kanban",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "description": "Yet another Kanban/Trello board lib for React.",
   "main": "dist/index.js",
   "files": [
@@ -11,59 +11,60 @@
   "author": "Leandro Lourenci",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.11.6",
-    "@babel/eslint-parser": "7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "7.11.0",
-    "@babel/preset-env": "7.11.5",
-    "@babel/preset-react": "7.10.4",
-    "@cypress/code-coverage": "3.8.2",
-    "@testing-library/jest-dom": "5.11.5",
-    "@testing-library/react": "10.4.9",
-    "@typescript-eslint/eslint-plugin": "4.6.0",
-    "@typescript-eslint/parser": "4.6.0",
-    "babel-loader": "8.1.0",
-    "babel-plugin-istanbul": "6.0.0",
+    "@babel/core": "7.21.3",
+    "@babel/eslint-parser": "7.21.3",
+    "@babel/plugin-proposal-optional-chaining": "7.21.0",
+    "@babel/preset-env": "7.20.2",
+    "@babel/preset-react": "7.18.6",
+    "@cypress/code-coverage": "3.10.0",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "14.0.0",
+    "@typescript-eslint/eslint-plugin": "5.56.0",
+    "@typescript-eslint/parser": "5.56.0",
+    "babel-loader": "9.1.2",
+    "babel-plugin-istanbul": "6.1.1",
     "babel-plugin-react-remove-properties": "0.3.0",
-    "cross-env": "7.0.2",
-    "css-loader": "3.5.3",
-    "cypress": "4.12.1",
-    "eslint": "7.2.0",
-    "eslint-config-prettier": "6.11.0",
-    "eslint-config-standard": "14.1.1",
-    "eslint-config-standard-react": "9.2.0",
-    "eslint-plugin-cypress": "2.11.2",
-    "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-jest": "23.13.2",
-    "eslint-plugin-jest-dom": "2.1.0",
+    "cross-env": "7.0.3",
+    "css-loader": "6.7.3",
+    "cypress": "12.8.1",
+    "eslint": "8.36.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-config-standard": "17.0.0",
+    "eslint-config-standard-react": "13.0.0",
+    "eslint-plugin-cypress": "2.12.1",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jest": "27.2.1",
+    "eslint-plugin-jest-dom": "4.0.3",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.1.3",
-    "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.20.6",
-    "eslint-plugin-react-hooks": "4.0.8",
-    "eslint-plugin-standard": "4.0.2",
-    "eslint-plugin-testing-library": "3.2.0",
-    "html-webpack-plugin": "4.3.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-standard": "4.1.0",
+    "eslint-plugin-testing-library": "5.10.2",
+    "html-webpack-plugin": "5.5.0",
     "identity-obj-proxy": "3.0.0",
-    "istanbul-lib-coverage": "3.0.0",
-    "jest": "26.4.2",
-    "jest-circus": "26.4.2",
-    "mini-css-extract-plugin": "0.9.0",
-    "node-sass": "4.14.1",
-    "prettier": "2.0.5",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "sass-loader": "8.0.2",
-    "semantic-release": "17.0.8",
-    "start-server-and-test": "1.11.5",
-    "ts-loader": "8.0.6",
-    "typescript": "4.0.5",
-    "webpack": "4.44.2",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.11.0"
+    "istanbul-lib-coverage": "3.2.0",
+    "jest": "29.5.0",
+    "jest-circus": "29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "mini-css-extract-plugin": "2.7.5",
+    "node-sass": "8.0.0",
+    "prettier": "2.8.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sass-loader": "13.2.1",
+    "semantic-release": "21.0.0",
+    "start-server-and-test": "2.0.0",
+    "ts-loader": "9.4.2",
+    "typescript": "5.0.2",
+    "webpack": "5.76.3",
+    "webpack-cli": "5.0.1",
+    "webpack-dev-server": "4.13.1"
   },
   "scripts": {
     "prepublishOnly": "rm -rf dist/ && NODE_ENV=production webpack --config webpack.prod.js",
@@ -77,6 +78,6 @@
     "dev": "cross-env NODE_ENV=cypress start-test server 8080 'cypress open'"
   },
   "dependencies": {
-    "react-beautiful-dnd": "^13.0.0"
+    "react-beautiful-dnd": "^13.1.1"
   }
 }
